--- a/client/addproduct.html
+++ b/client/addproduct.html
@@ -12,7 +12,7 @@
     <body>
         <div class="container-fluid">
             <h1 class="text-center m-4">Product Form</h1>
-            <form onsubmit="onSubmit(event)">
+            <form onsubmit="onSubmit(event)" id="pForm">
                 <div class="row">
                     <div class="col-md-3 row mt-5">
                         <div class="col-2">
