--- a/client/addproduct.html
+++ b/client/addproduct.html
@@ -110,6 +110,23 @@
                     </div>
                 </div>
             </form>
+            <div class="m-5">
+                <table class="table" id="ptable">
+                    <thead>
+                        <tr>
+                            <th>S.No</th>
+                            <th>Company</th>
+                            <th>Type</th>
+                            <th>Size</th>
+                            <th>Price</th>
+                            <th>Model</th>
+                            <th>Color</th>
+                            <th>Status</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>    
+                </table>
+            </div>
         </div>
     </body>
 </html>
