--- a/client/addproduct.html
+++ b/client/addproduct.html
@@ -12,7 +12,7 @@
     <body>
         <div class="container-fluid">
             <h1 class="text-center m-4">Product Form</h1>
-            <form onsubmit="onSubmit(event)" id="pForm">
+            <form onsubmit="onSubmit(event)" id="pForm" onreset="onReset()">
                 <div class="row">
                     <div class="col-md-3 row mt-5">
                         <div class="col-2">
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 justify-content-center row mt-5">
-                        <button class="btn btn-primary" type="submit">Add</button>
+                        <button class="btn btn-primary" id="sbtn" type="submit">Add</button>
                         <span class="ml-2 mr-2"></span>
                         <button class="btn btn-danger" type="reset">Cancel</button>
                     </div>
